<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- <com.example.teststereocamera.AspectFrameLayout -->
    <!-- android:id="@+id/cameraPreview_afl" -->
    <!-- android:layout_width="match_parent" -->
    <!-- android:layout_height="match_parent" -->
    <!-- > -->

    <android.opengl.GLSurfaceView
        android:id="@+id/cameraPreview_surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center" />

    <!-- </com.example.teststereocamera.AspectFrameLayout> -->
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cameraParams_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ToggleButton
            android:id="@+id/toggleRecording_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toggleRecordingOff"
            android:textOn="@string/toggleRecordingOn" />

        <Button
            android:id="@+id/toggleCapture_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_string_capture" />
        
        <Button
            android:id="@+id/view_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_string_view" />
    </LinearLayout>
    <RadioGroup
	        android:id="@+id/radioGroup_PreviewMode"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <RadioButton
	            android:id="@+id/radio_stereo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/button_preview_mode_stereo" />
	
	        <RadioButton
	            android:id="@+id/radio_sbs"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_preview_mode_sbs" />
	
	        <RadioButton
	            android:id="@+id/radio_vr"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_preview_mode_sbs_vr" />
	        
	        <RadioButton
	            android:id="@+id/radio_single_left"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_preview_mode_stereo_left"
	            android:visibility="gone" />
	        
	        <RadioButton
	            android:id="@+id/radio_single_right"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/button_preview_mode_stereo_right"
	            android:visibility="gone" />
	    </RadioGroup>
</LinearLayout>
</FrameLayout>